--- a/coreblue/Info.plist
+++ b/coreblue/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>f</string>
 	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string>1</string>
 	<key>LSApplicationCategoryType</key>
